# Codex-API-Tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
cloudflare/sync-api/: wrangler.jsonc
cloudflare/sync-api/migrations/: 0001_init.sql  0002_sync_key.sql
cloudflare/sync-api/src/: index.ts
scripts/: cargo-run.mjs  install-codex-tools.ps1  install-codex-tools.sh  tauri-run.mjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: local_tools.rs  main.rs
