[package]
name = "codex-api-tools"
version = "0.1.1"
description = "Codex API toolbox for provider repair, history sync, and auth-token wiring."
authors = ["Simplaj"]
edition = "2021"
autobins = false
build = false

[[bin]]
name = "codex-tools"
path = "src/bin/codex-tools.rs"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
filetime = "0.2"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rpassword = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zstd = "0.13"
